Updated index.html to link to github

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 </head><body>
 <div id="str">
-<h1><a href="http://sourceforge.net/projects/seage/" title="SEAGE: SEarch AGEnts for optimization"><strong>SEAGE</strong></a></h1>
+<h1><a href="https://github.com/seage/seage" title="SEAGE: SEarch AGEnts for optimization"><strong>SEAGE</strong></a></h1>
 <h2><em>SE</em>ARCH <em>AGE</em>NTS for optimization</h2>
 <hr />
 <div id="str-stat">
@@ -149,7 +149,15 @@ A more detailed description can be found in <a href="http://seage.sourceforge.ne
 </table>
 </div>
 <h3>Source Code</h3>
-<div class="str-stat-odd centered"> <a href="http://sourceforge.net/projects/seage"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=269278&amp;type=15" width="150" height="40" alt="Get SEAGE at SourceForge.net. Fast, secure and Free Open Source software downloads" /></a> </div>
+<div class="download">
+
+      <a href="https://github.com/seage/seage">
+        <img border="0" width="90" src="https://github.com/images/error/octocat_happy.gif"></a>
+      <a href="http://github.com/seage/seage/zipball/master">
+        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
+      <a href="http://github.com/seage/seage/tarball/master">
+        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
+    </div>
 </div>
 <div id="stat-sl2">
 <h3>Contact</h3>
