--- a/index.html
+++ b/index.html
@@ -25,7 +25,20 @@
   
   
   <link href="./seage.css" type="text/css" rel="stylesheet" media="screen" />
+	
+ <script type="text/javascript">
 
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-26970643-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </head><body>
 <div id="str">
 <h1><a href="https://github.com/seage/seage" title="SEAGE: SEarch AGEnts for optimization"><strong>SEAGE</strong></a></h1>
