--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </div>
                     <h3>Feature Matrix</h3>
                     <div class="str-stat-odd">
-                        <table id="tab-fm" border="">
+                        <table id="tab-fm">
                             <tbody>
                                 <tr>
                                     <th>&nbsp;</th>
