Added malek10hyper.pdf paper

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ on various optimization problems. Each meta-heuristic can be handled
 through an unified interface of an object called Adapter. Agents have
 been designed to solve optimization problems through a collaboration of
 different meta-heuristics. <br />
-A more detailed description can be found in <a href="http://seage.sourceforge.net/data/malek09col.pdf" onclick="window.open(this.href); return false;">this paper</a>. </div>
+A more detailed description can be found in <a href="data/malek09col.pdf" onclick="window.open(this.href); return false;">this</a> or <a href="data/malek10hyper.pdf" onclick="window.open(this.href); return false;">this</a> paper. </div>
 <h3>Feature Matrix</h3>
 <div class="str-stat-odd">
 <table id="tab-fm" border="0">
