Added the Publication section

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                             <li><a href="tabs/overview.html"><span>Overview</span></a></li>
                             <li><a href="tabs/architecture.html"><span>Architecture</span></a></li>
                             <li><a href="tabs/roadmap.html"><span>Roadmap</span></a></li>
-                            <li><a href="tabs/getinvolved.html"><span>Get Involved!</span></a></li>
+			    <li><a href="tabs/publications.html"><span>Publications</span></a></li>
+                            <li><a href="tabs/getinvolved.html"><span><b>Get Involved!</b></span></a></li>
                     </ul>
 
                     <!--div id="example">
