Added malek09specstudy publication, published

--- a/tabs/getinvolved.html
+++ b/tabs/getinvolved.html
@@ -1,1 +1,16 @@
-<div>Get Involved</div>
+<div>
+<div>Interested in the SEAGE project?</div>
+<br/>
+<div><b>Get Involved!</b></div>
+
+<div>
+                    <h3>Contact</h3>
+                    <div class="str-stat-odd"> Richard Malek [<a href="mailto:malekr1%40fel.cvut.cz">email</a>] 
+                        <br />Department of Cybernetics
+                        <br />Czech Technical University 
+                        <br />Prague, Czech Republic 
+                    </div>
+
+                </div>
+
+</div>
