--- a/tabs/publications.html
+++ b/tabs/publications.html
@@ -23,5 +23,10 @@
     <a href="data/malek09col.bib">[BibTeX]<a/>  
   </li>
 </ul>
-
+<h4>Theses</h4>
+<ul>
+  <li>Malek, R.: Global Optimization through Meta-Heuristic Collaboration in a Multi-Agent System. Specialised study. Prague: Czech Technical University in Prague, 2009.<br/>
+    <a href="data/malek09specstudy.pdf">[PDF]<a/>
+  </li>
+</ul>
 </div>
