Fixed octocat path and dates of publications.

--- a/tabs/overview.html
+++ b/tabs/overview.html
@@ -113,7 +113,7 @@
                     <h3>Source Code</h3>
                     <div class="download">
                         <a href="https://github.com/seage/seage">
-                            <img src="https://github.com/images/error/octocat_happy.gif" width="90" height="68" alt="github" />
+                            <img src="images/octocat.png" height="88" alt="github" />
                         </a>
                         <a href="http://github.com/seage/seage/zipball/master">
                             <img src="http://github.com/images/modules/download/zip.png" width="90" height="88" alt="ZIP" />
