Fixed year to a publication

--- a/tabs/publications.html
+++ b/tabs/publications.html
@@ -2,7 +2,7 @@
 <h3>2011</h3>
 <h4>Theses</h4>
 <ul>
-  <li>Durkota, K. - Malek, R: Implementation of a Discrete Firefly Algorithm Within the SEAGE Framework. Bachelor theses. Prague: Czech Technical University in Prague, 2010.<br/> 
+  <li>Durkota, K. - Malek, R: Implementation of a Discrete Firefly Algorithm Within the SEAGE Framework. Bachelor thesis. Prague: Czech Technical University in Prague, 2011.<br/> 
     <a href="http://cyber.felk.cvut.cz/research/theses/papers/189.pdf">[PDF]<a/>
   </li>
 </ul>
