Added a link to linkedin and updated email

--- a/tabs/getinvolved.html
+++ b/tabs/getinvolved.html
@@ -5,7 +5,7 @@
 
 <div>
                     <h3>Contact</h3>
-                    <div class="str-stat-odd"> Richard Malek [<a href="mailto:malekr1%40fel.cvut.cz">email</a>] 
+                    <div class="str-stat-odd"> <a href="http://lnkd.in/k2tEnD">Richard Malek</a> [<a href='&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#114;&#105;&#99;&#107;&#64;&#114;&#105;&#99;&#107;&#113;&#46;&#110;&#101;&#116;'>&#101;&#109;&#97;&#105;&#108;</a>] 
                         <br />Department of Cybernetics
                         <br />Czech Technical University 
                         <br />Prague, Czech Republic 
