--- a/tabs/overview.html
+++ b/tabs/overview.html
@@ -126,7 +126,7 @@
 
                 <div id="stat-sl2">
                     <h3>Contact</h3>
-                    <div class="str-stat-odd"> Richard Malek [<a href='&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#114;&#105;&#99;&#107;&#64;&#114;&#105;&#99;&#107;&#113;&#46;&#110;&#101;&#116;'>&#101;&#109;&#97;&#105;&#108;</a>] 
+                    <div class="str-stat-odd"> <a href="http://lnkd.in/k2tEnD">Richard Malek</a> [<a href='&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#114;&#105;&#99;&#107;&#64;&#114;&#105;&#99;&#107;&#113;&#46;&#110;&#101;&#116;'>&#101;&#109;&#97;&#105;&#108;</a>] 
 			<br/>
                         <br />Department of Cybernetics
                         <br />Czech Technical University 
