Extended SEO information

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
         <meta name='author' content='all: Richard Malek - FEE, CTU in Prague, CZ' />
         <meta name='description' content='SEAGE: SEarch AGEnts for optimization' />
-        <meta name='keywords' content='search agents optimalization open source meta-heuristic algorithm' />
+        <meta name='keywords' content='combinatorial optimalization, meta-heuristic, metaheuristic, hyper-heuristic, hyperheuristic, genetic algorithm, tabu search, ant colony, particle swarm' />
         <link rel='shortcut icon' href='favicon.ico' type='image/x-icon' />
         <link href='./seage.css' media='screen, projection' rel='stylesheet' type='text/css' />
-        <title>SEAGE</title>
+        <title>SEAGE - A Hyperheuristic Framework </title>
 
 
         <!--link rel="stylesheet" href="style.css" type="text/css" media="screen" title="Flora (Default)"/-->
