Changed directory structure of the page

--- a/getinvolved.html
+++ b/getinvolved.html
@@ -1,4 +1,10 @@
-<div>
+<!DOCTYPE html>
+<html>
+    <head>
+            <link href='./style.css' media='screen, projection' rel='stylesheet' type='text/css' />
+    </head>
+ <body>
+ <div>
 <div>Interested in the SEAGE project?</div>
 <br/>
 <div><b>Get Involved!</b></div>
@@ -14,3 +20,5 @@
                 </div>
 
 </div>
+</body>
+</html>
