--- a/overview.html
+++ b/overview.html
@@ -1,4 +1,10 @@
-<div id="fragment-100"> 
+<!DOCTYPE html>
+<html>
+    <head>
+            <link href='./style.css' media='screen, projection' rel='stylesheet' type='text/css' />
+    </head>
+ <body>
+ <div id="fragment-100"> 
  <div id="stat-sl1">
                     <h3>Description</h3>
                     <div class="str-stat-odd"> SEAGE is an open-source project which provides various meta-heuristic algorithms with their implementations on various optimization problems. Each meta-heuristic can be handled through an unified interface of an object called Adapter. Agents have been designed to solve optimization problems through a collaboration of different meta-heuristics.                   
@@ -150,3 +156,5 @@
                 <div id="stat-reset">&nbsp;</div>
            </div>
 </div>
+</body>
+<html>
