--- a/publications.html
+++ b/publications.html
@@ -1,9 +1,15 @@
-<div>
+<!DOCTYPE html>
+<html>
+    <head>
+            <link href='./style.css' media='screen, projection' rel='stylesheet' type='text/css' />
+    </head>
+ <body>
+<div id="publications">
 <h3>2011</h3>
 <h4>Theses</h4>
 <ul>
   <li>Durkota, K. - Malek, R: Implementation of a Discrete Firefly Algorithm Within the SEAGE Framework. Bachelor thesis. Prague: Czech Technical University in Prague, 2011.<br/> 
-    <a href="http://cyber.felk.cvut.cz/research/theses/papers/189.pdf">[PDF]<a/>
+    <a href="http://cyber.felk.cvut.cz/research/theses/papers/189.pdf">[PDF]</a>
   </li>
 </ul>
 
@@ -11,8 +17,8 @@
 <h4>Papers</h4>
 <ul>
   <li>Malek, R.: An Agent-Based Hyper-Heuristic Approach to Combinatorial Optimization Problems. In Proceedings of 2010 IEEE International Conference on Intelligent Computing and Intelligent Systems. New York: IEEE Press, 2010, vol. 3, p. 428-434. ISBN 978-1-4244-6583-5.<br/>
-    <a href="data/malek10hyper.pdf">[PDF]<a/>
-    <a href="data/malek10hyper.bib">[BibTeX]<a/>
+    <a href="data/malek10hyper.pdf">[PDF]</a>
+    <a href="data/malek10hyper.bib">[BibTeX]</a>
   </li>
 </ul>
 
@@ -20,14 +26,16 @@
 <h4>Papers</h4>
 <ul>
   <li>Malek, R.: Collaboration of Metaheuristic Algorithms through a Multi-Agent System. In Holonic and Multi-Agent Systems for Manufacturing - HoloMAS 2009. Heidelberg: Springer, 2009, p. 72-81. ISBN 978-3-642-03666-8.<br/>
-    <a href="data/malek09col.pdf">[PDF]<a/>
-    <a href="data/malek09col.bib">[BibTeX]<a/>  
+    <a href="data/malek09col.pdf">[PDF]</a>
+    <a href="data/malek09col.bib">[BibTeX]</a>  
   </li>
 </ul>
 <h4>Theses</h4>
 <ul>
   <li>Malek, R.: Global Optimization through Meta-Heuristic Collaboration in a Multi-Agent System. Specialised study. Prague: Czech Technical University in Prague, 2009.<br/>
-    <a href="data/malek09specstudy.pdf">[PDF]<a/>
+    <a href="data/malek09specstudy.pdf">[PDF]</a>
   </li>
 </ul>
 </div>
+</body>
+</html>
