--- a/overview.html
+++ b/overview.html
@@ -24,64 +24,64 @@
                                 </tr>
                                 <tr>
                                     <td class="sl1">GRASP</td>
-                                    <td><img src="images/accept.png" title="done" alt="done" height="16" width="16" /></td>
-                                    <td><img src="images/accept.png" title="done" alt="done" height="16" width="16" /></td>
-                                    <td>&nbsp;</td>
+                                    <td class="td-tl"><img id="img-warn"/></td>
+                                    <td class="td-t"><img id="img-warn"/></td>
+                                    <td class="td-tr">&nbsp;</td>
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
                                 </tr>
                                 <tr>
                                     <td class="sl1">Genetic Algorithm</td>
-                                    <td><img src="images/accept.png" title="done" alt="done" height="16" width="16" /></td>
-                                    <td><img src="images/in_progress.png" title="In progress" alt="in progress" height="16" width="16" /></td>
-                                    <td><img src="images/in_progress.png" title="In progress" alt="in progress" height="16" width="16" /></td>
+                                    <td class="td-l"><img id="img-yes"/></td>
+                                    <td class="td-m"><img id="img-yes"/></td>
+                                    <td class="td-r"><img id="img-no"/></td>
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
                                 </tr>
                                 <tr>
                                     <td class="sl1">Tabu Search</td>
-                                    <td><img src="images/accept.png" title="done" alt="done" height="16" width="16" /></td>
-                                    <td><img src="images/in_progress.png" title="In progress" alt="in progress" height="16" width="16" /></td>
-                                    <td><img src="images/in_progress.png" title="In progress" alt="in progress" height="16" width="16" /></td>
-                                    <td><img src="images/accept.png" title="done" alt="done" height="16" width="16" /></td>
+                                    <td class="td-l"><img id="img-yes"/></td>
+                                    <td class="td-m"><img id="img-yes"/></td>
+                                    <td class="td-r"><img id="img-no"/></td>
+                                    <td><img id="img-warn"/></td>
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
                                 </tr>
                                 <tr>
                                     <td class="sl1">Simulated Annealing</td>
-                                    <td><img src="images/accept.png" title="done" alt="done" height="16" width="16" /></td>
-                                    <td>&nbsp;</td>
-                                    <td>&nbsp;</td>
-                                    <td><img src="images/accept.png" title="done" alt="done" height="16" width="16" /></td>
+                                    <td class="td-l"><img id="img-yes"/></td>
+                                    <td class="td-m">&nbsp;</td>
+                                    <td class="td-r">&nbsp;</td>
+                                    <td><img id="img-warn"/></td>
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
                                 </tr>
                                 <tr>
                                     <td class="sl1">Ant Colony</td>
-                                    <td><img src="images/accept.png" title="done" alt="done" height="16" width="16" /></td>
-                                    <td><img src="images/accept.png" title="done" alt="done" height="16" width="16" /></td>
-                                    <td>&nbsp;</td>
+                                    <td class="td-bl"><img id="img-yes"/></td>
+                                    <td class="td-b"><img id="img-warn"/></td>
+                                    <td class="td-br">&nbsp;</td>
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
                                 </tr>    
                                 <tr>
                                     <td class="sl1">Particle Swarm</td>
-                                    <td><img src="images/accept.png" title="done" alt="done" height="16" width="16" /></td>
+                                    <td><img id="img-warn"/></td>
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
-                                    <td><img src="images/in_progress.png" title="In progress" alt="In progress" height="16" width="16" /></td>
+                                    <td><img id="img-warn"/></td>
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
                                 </tr>
                                 <tr>
                                     <td class="sl1">Firefly Algorithm</td>
-                                    <td><img src="images/in_progress.png" title="In progress" alt="In progress" height="16" width="16" /></td>
+                                    <td><img id="img-warn"/></td>
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
-                                    <td><img src="images/in_progress.png" title="In progress" alt="In progress" height="16" width="16" /></td>
+                                    <td><img id="img-warn"/></td>
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
                                 </tr>
