Fixed project's web references

--- a/overview.html
+++ b/overview.html
@@ -147,9 +147,7 @@
                     <h3>Project References</h3>
                     <div class="str-stat-odd"> 
                         <a href="http://github.com/seage/seage">http://github.com/seage/seage</a><br/> 
-                        <a href="http://sourceforge.net/projects/seage/">http://sourceforge.net/projects/seage/</a><br/> 
-                        <a href="http://www.ohloh.net/p/seage">http://www.ohloh.net/p/seage</a><br/> 
-                        <a href="http://seage.java.net">http://seage.java.net</a><br/>
+                        <a href="http://www.openhub.net/p/seage">http://www.openhub.net/p/seage</a><br/> 
                     </div>
                 </div>
 
