--- a/overview.html
+++ b/overview.html
@@ -24,8 +24,8 @@
                                 </tr>
                                 <tr>
                                     <td class="sl1">GRASP</td>
-                                    <td class="td-tl"><img id="img-warn"/></td>
-                                    <td class="td-t"><img id="img-warn"/></td>
+                                    <td class="td-tl"><img class="img-tbl" src="images/warn.png"/></td>
+                                    <td class="td-t"><img class="img-tbl" src="images/warn.png"/></td>
                                     <td class="td-tr">&nbsp;</td>
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
@@ -33,35 +33,35 @@
                                 </tr>
                                 <tr>
                                     <td class="sl1">Genetic Algorithm</td>
-                                    <td class="td-l"><img id="img-yes"/></td>
-                                    <td class="td-m"><img id="img-yes"/></td>
-                                    <td class="td-r"><img id="img-no"/></td>
+                                    <td class="td-l"><img class="img-tbl" src="images/yes.png"/></td>
+                                    <td class="td-m"><img class="img-tbl" src="images/yes.png"/></td>
+                                    <td class="td-r"><img class="img-tbl" src="images/no.png"/></td>
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
                                 </tr>
                                 <tr>
                                     <td class="sl1">Tabu Search</td>
-                                    <td class="td-l"><img id="img-yes"/></td>
-                                    <td class="td-m"><img id="img-yes"/></td>
-                                    <td class="td-r"><img id="img-no"/></td>
-                                    <td><img id="img-warn"/></td>
+                                    <td class="td-l"><img class="img-tbl" src="images/yes.png"/></td>
+                                    <td class="td-m"><img class="img-tbl" src="images/yes.png"/></td>
+                                    <td class="td-r"><img class="img-tbl" src="images/no.png"/></td>
+                                    <td><img class="img-tbl" src="images/warn.png"/></td>
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
                                 </tr>
                                 <tr>
                                     <td class="sl1">Simulated Annealing</td>
-                                    <td class="td-l"><img id="img-yes"/></td>
+                                    <td class="td-l"><img class="img-tbl" src="images/yes.png"/></td>
                                     <td class="td-m">&nbsp;</td>
                                     <td class="td-r">&nbsp;</td>
-                                    <td><img id="img-warn"/></td>
+                                    <td><img class="img-tbl" src="images/warn.png"/></td>
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
                                 </tr>
                                 <tr>
                                     <td class="sl1">Ant Colony</td>
-                                    <td class="td-bl"><img id="img-yes"/></td>
-                                    <td class="td-b"><img id="img-warn"/></td>
+                                    <td class="td-bl"><img class="img-tbl" src="images/yes.png"/></td>
+                                    <td class="td-b"><img class="img-tbl" src="images/warn.png"/></td>
                                     <td class="td-br">&nbsp;</td>
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
@@ -69,23 +69,23 @@
                                 </tr>    
                                 <tr>
                                     <td class="sl1">Particle Swarm</td>
-                                    <td><img id="img-warn"/></td>
+                                    <td><img class="img-tbl" src="images/warn.png"/></td>
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
-                                    <td><img id="img-warn"/></td>
+                                    <td><img class="img-tbl" src="images/warn.png"/></td>
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
                                 </tr>
                                 <tr>
                                     <td class="sl1">Firefly Algorithm</td>
-                                    <td><img id="img-warn"/></td>
+                                    <td><img class="img-tbl" src="images/warn.png"/></td>
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
-                                    <td><img id="img-warn"/></td>
+                                    <td><img class="img-tbl" src="images/warn.png"/></td>
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
                                 </tr>
-                                <tr>
+                                <!--<tr>
                                     <td class="sl1">Bees Algorithm</td>
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
@@ -111,7 +111,7 @@
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
-                                </tr>
+                                </tr>-->
                             </tbody>
                         </table>
                     </div>
