Changed the algorithm progress states

--- a/overview.html
+++ b/overview.html
@@ -52,7 +52,7 @@
                                 <tr>
                                     <td class="sl1">Simulated Annealing</td>
                                     <td class="td-l"><img class="img-tbl" src="images/yes.png"/></td>
-                                    <td class="td-m">&nbsp;</td>
+                                    <td class="td-m"><img class="img-tbl" src="images/warn.png"/></td>
                                     <td class="td-r">&nbsp;</td>
                                     <td><img class="img-tbl" src="images/warn.png"/></td>
                                     <td>&nbsp;</td>
@@ -61,7 +61,7 @@
                                 <tr>
                                     <td class="sl1">Ant Colony</td>
                                     <td class="td-bl"><img class="img-tbl" src="images/yes.png"/></td>
-                                    <td class="td-b"><img class="img-tbl" src="images/warn.png"/></td>
+                                    <td class="td-b"><img class="img-tbl" src="images/yes.png"/></td>
                                     <td class="td-br">&nbsp;</td>
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
