--- a/overview.html
+++ b/overview.html
@@ -24,18 +24,18 @@
                                 </tr>
                                 <tr>
                                     <td class="sl1">GRASP</td>
-                                    <td class="td-tl"><img class="img-tbl" src="images/warn.png"/></td>
-                                    <td class="td-t"><img class="img-tbl" src="images/warn.png"/></td>
-                                    <td class="td-tr">&nbsp;</td>
+                                    <td class="td"><img class="img-tbl" src="images/warn.png"/></td>
+                                    <td class="td"><img class="img-tbl" src="images/warn.png"/></td>
+                                    <td class="td">&nbsp;</td>
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
                                 </tr>
                                 <tr>
                                     <td class="sl1">Genetic Algorithm</td>
-                                    <td class="td-l"><img class="img-tbl" src="images/yes.png"/></td>
-                                    <td class="td-m"><img class="img-tbl" src="images/yes.png"/></td>
-                                    <td class="td-r"><img class="img-tbl" src="images/no.png"/></td>
+                                    <td class="td-tl"><img class="img-tbl" src="images/yes.png"/></td>
+                                    <td class="td-t"><img class="img-tbl" src="images/yes.png"/></td>
+                                    <td class="td-tr"><img class="img-tbl" src="images/no.png"/></td>
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
@@ -52,7 +52,7 @@
                                 <tr>
                                     <td class="sl1">Simulated Annealing</td>
                                     <td class="td-l"><img class="img-tbl" src="images/yes.png"/></td>
-                                    <td class="td-m"><img class="img-tbl" src="images/warn.png"/></td>
+                                    <td class="td-m"><img class="img-tbl" src="images/yes.png"/></td>
                                     <td class="td-r">&nbsp;</td>
                                     <td><img class="img-tbl" src="images/warn.png"/></td>
                                     <td>&nbsp;</td>
