Changed Feature tab, GA for JSSP done

--- a/overview.html
+++ b/overview.html
@@ -35,7 +35,7 @@
                                     <td class="sl1">Genetic Algorithm</td>
                                     <td class="td-tl"><img class="img-tbl" src="images/yes.png"/></td>
                                     <td class="td-t"><img class="img-tbl" src="images/yes.png"/></td>
-                                    <td class="td-tr"><img class="img-tbl" src="images/no.png"/></td>
+                                    <td class="td-tr"><img class="img-tbl" src="images/yes.png"/></td>
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
