--- a/overview.html
+++ b/overview.html
@@ -44,7 +44,7 @@
                                     <td class="sl1">Tabu Search</td>
                                     <td class="td-l"><img class="img-tbl" src="images/yes.png"/></td>
                                     <td class="td-m"><img class="img-tbl" src="images/yes.png"/></td>
-                                    <td class="td-r"><img class="img-tbl" src="images/no.png"/></td>
+                                    <td class="td-r"><img class="img-tbl" src="images/warn.png"/></td>
                                     <td><img class="img-tbl" src="images/warn.png"/></td>
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
@@ -53,7 +53,7 @@
                                     <td class="sl1">Simulated Annealing</td>
                                     <td class="td-l"><img class="img-tbl" src="images/yes.png"/></td>
                                     <td class="td-m"><img class="img-tbl" src="images/yes.png"/></td>
-                                    <td class="td-r">&nbsp;</td>
+                                    <td class="td-r"><img class="img-tbl" src="images/no.png"/></td>
                                     <td><img class="img-tbl" src="images/warn.png"/></td>
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
@@ -62,7 +62,7 @@
                                     <td class="sl1">Ant Colony</td>
                                     <td class="td-bl"><img class="img-tbl" src="images/yes.png"/></td>
                                     <td class="td-b"><img class="img-tbl" src="images/yes.png"/></td>
-                                    <td class="td-br">&nbsp;</td>
+                                    <td class="td-br"><img class="img-tbl" src="images/no.png"/></td>
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
                                     <td>&nbsp;</td>
